db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: atsea
  labels:
    app: atsea-db-service
spec:
  selector:
    app: db-sfs-app
  type: ClusterIP
  ports:
    - port: 5432
