reverseproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reverseproxy-service
  namespace: atsea
  labels:
    app: atsea-reverseproxy
spec:
  selector:
    app: reverseproxy-app
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
---
